--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     style="background-image: url(https://i.ibb.co/qCkd9jS/img1.jpg);">
                     <div class="content">
                         <div class="name">Switzerland</div>
-                        <div class="des">X-Dev, Transforming code into visual poetry..!</div>
+                        <div class="des"> Transforming code into visual poetry..!</div>
                         <button>See More</button>
                     </div>
                 </div>
