--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     style="background-image: url(https://i.ibb.co/jrRb11q/img2.jpg);">
                     <div class="content">
                         <div class="name">Finland</div>
-                        <div class="des">X-Dev, Transforming code into visual poetry..!</div>
+                        <div class="des">Transforming code into visual poetry..!</div>
                         <button>See More</button>
                     </div>
                 </div>
@@ -37,7 +37,7 @@
                     style="background-image: url(https://i.ibb.co/NSwVv8D/img3.jpg);">
                     <div class="content">
                         <div class="name">Iceland</div>
-                        <div class="des">X-Dev, Transforming code into visual poetry..!</div>
+                        <div class="des">Transforming code into visual poetry..!</div>
                         <button>See More</button>
                     </div>
                 </div>
@@ -45,7 +45,7 @@
                     style="background-image: url(https://i.ibb.co/Bq4Q0M8/img4.jpg);">
                     <div class="content">
                         <div class="name">Australia</div>
-                        <div class="des">X-Dev, Transforming code into visual poetry..!</div>
+                        <div class="des">Transforming code into visual poetry..!</div>
                         <button>See More</button>
                     </div>
                 </div>
@@ -53,7 +53,7 @@
                     style="background-image: url(https://i.ibb.co/jTQfmTq/img5.jpg);">
                     <div class="content">
                         <div class="name">Netherland</div>
-                        <div class="des">X-Dev, Transforming code into visual poetry..!</div>
+                        <div class="des">Transforming code into visual poetry..!</div>
                         <button>See More</button>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                     style="background-image: url(https://i.ibb.co/RNkk6L0/img6.jpg);">
                     <div class="content">
                         <div class="name">Ireland</div>
-                        <div class="des">X-Dev, Transforming code into visual poetry..! </div>
+                        <div class="des">Transforming code into visual poetry..! </div>
                         <button>See More</button>
                     </div>
                 </div>
